[package]
name = "vallicks"
version = "0.1.1"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-s", "-vga", "std",
               "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-device",
               "rtl8139,netdev=u1,mac=12:34:56:78:90:ab", "-netdev", "tap,id=u1,ifname=tap0,script=no,downscript=no",
               "-object", "filter-dump,id=f1,netdev=u1,file=dump.dat", "-nographic"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"] 
test-success-exit-code = 33
test-timeout = 300

[dependencies]
bootloader = { version = "0.8.6", features = ["map_physical_memory"] }
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = "0.8.3"
uart_16550 = "0.2.2"
pic8259_simple = { path = "./libs/pic8259_simple" }
pc-keyboard = "0.5.0"
linked_list_allocator = "=0.6.5"
menu = "0.3.2"
arraydeque = { version = "0.4.5", default-features = false }
x86 = "0.29.0"
hashbrown = "0.7.0"
buddy_system_allocator = "0.3.6"
vallicks-macros = { path = "./libs/vallicks_macros" }

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"
