[package]
name = "vallicks"
version = "0.1.1"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.9.11", features = ["map_physical_memory"] }
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
x86_64 = "^0.13.1"
uart_16550 = "0.2.10"
pic8259_simple = { path = "./libs/pic8259_simple" }
pc-keyboard = "0.5.1"
linked_list_allocator = "0.8.9"
menu = "0.3.2"
arraydeque = { version = "0.4.5", default-features = false }
x86 = "0.34.0"
hashbrown = "0.9.1"
buddy_system_allocator = { version = "0.6.0", features = ["const_fn"] }
vallicks-macros = { path = "./libs/vallicks_macros" }
crossbeam-queue = { version = "0.3.1", default-features = false, features = ["alloc"] }
crossbeam-utils = { version = "0.8.1", default-features = false }
conquer-once = { version = "0.3.2", default-features = false }
futures-util = { version = "0.3.8", default-features = false, features = ["alloc", "async-await", "async-await-macro", "sink"] }
async-trait = "0.1.42"
slab = { git = "https://github.com/zakarumych/slab", branch = "nostd", default-features = false }
rtl8139-rs = "*"
nom = { version = "6.0.1", default-features = false, features = ["alloc", "bitvec"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
